# pdfdeal

./: .gitignore  README.md  README_CN.md  pyproject.toml
scripts/: extract_v3_figures.py  extract_v3_tables.py  v3_media_crop_utils.py
src/pdfdeal/: __init__.py  doc2x.py  doc2x_img.py  v3_media.py
src/pdfdeal/CLI/: doc2x.py
src/pdfdeal/Doc2X/: ConvertV2.py  Exception.py  Types.py
src/pdfdeal/FileTools/: file_tools.py
tests/: test_pdf2file.py  test_pic2file.py  test_types.py  test_v3_media_crop_scripts.py
