[project]
name = "pdfdeal"
version = "1.0.4"
authors = [{ name = "noedgeai", email = "support@noedgeai.com" }]
description = "Python SDK for Doc2X API and some native texts processing (to improve texts recall in RAG)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiofiles>=24.1.0",
    "cryptography>=46.0.5",
    "h2>=4.3.0",
    "httpx[http2]>=0.23.1, <1",
    "pypdf>=6.8.0",
    "pytest>=8.3.5",
    "urllib3>=2.6.3",
]

[project.optional-dependencies]
tools = [
    "emoji",
    "Pillow>=12.1.1; python_version>='3.10'",
    "Pillow>=10.4.0,<12.0.0; python_version<'3.10'",
    "reportlab",
    "beautifulsoup4",
]
rag = [
    "emoji",
    "Pillow>=12.1.1; python_version>='3.10'",
    "Pillow>=10.4.0,<12.0.0; python_version<'3.10'",
    "reportlab",
    "oss2",
    "boto3",
    "minio",
    "beautifulsoup4",
]
dev = [
    "pytest",
    "emoji",
    "Pillow>=12.1.1; python_version>='3.10'",
    "Pillow>=10.4.0,<12.0.0; python_version<'3.10'",
    "reportlab",
    "oss2",
    "boto3",
    "minio",
    "beautifulsoup4",
]

[project.urls]
Issues = "https://github.com/NoEdgeAI/pdfdeal/issues"
Documentation = "https://noedgeai.github.io/pdfdeal-docs"
Source = "https://github.com/NoEdgeAI/pdfdeal"
Changelog = "https://noedgeai.github.io/pdfdeal-docs/changes"

[project.scripts]
doc2x = "pdfdeal.CLI.doc2x:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfdeal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
